--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -5,6 +5,11 @@ ClientsPage:
   country_button: "//tr[@id='customAdvanceSearch']//td[8]//span[@class='multiselect-selected-text']"
   country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
   country_click: "//label[contains(text(),'%s')]"
+  client_currency: "//td[@class='dvtCellInfo'][contains(text(),'EUR')]"
+  client_phone: "//span[@id='dtlview_Phone']/div[@class='actions_btn']"
+  client_country: "//span[@id='dtlview_Country']"
+  client_citizenship: "//span[@id='dtlview_Citizenship']"
+  citizenship: "//select[@id='citizenship']/option[contains(text(), '%s')]"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
@@ -39,3 +44,45 @@ LeadsModule:
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[3]"
   edit_status: "//*[@id='leadstatus_mass_edit_check']/div[1]/div"
   mass_edit_leads: "//*[@id='list_action_buttons']/input[2]"
+CALoginPage:
+  sign_up: "//button[contains(text(), 'Sign Up')]"
+  check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
+  login_btn: "//button[contains(text(), 'Login')]"
+  citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
+  submit_btn: "//button[contains (text(), 'Submit')]"
+  login_email_input: "//input[@name='login']"
+  login_btn_2: "//button[@class = 'forex-button-pandats login-button-pandats'][contains(text(), 'Login')]"
+  input_first_name: "//input[@name = 'firstName']"
+  input_last_name: "//input[@name = 'lastName']"
+  input_confirm_password: "//input[@name = 'passwordConfirm']"
+  city: "//input[@name = 'city']"
+  address: "//input[@name = 'address']"
+  zip_code: "//input[@name = 'postCode']"
+  next_btn: "//button[contains (text(), 'Next')]"
+CAPage:
+  create_account_btn: "//button[@class='forex-button-pandats'][contains(text(), 'Create Account')]"
+  actual_leverage: "//accounts/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/td[2]"
+  actual_currency: "//accounts/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/td[3]"
+  citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
+  edit_first_name: "//input[@name='firstName']"
+  get_first_name: "//input[@name='firstName']"
+  click_close: "//panda-forex-client-area/div/div/client-area-popup/div/div[2]/div[1]/a/i"
+WebTraderPage:
+  avaliable_funds: "//panda-forex-account-status/div/ul/li[1]/div[1]"
+  used_funds: "//panda-forex-account-status/div/ul/li[2]/div[1]"
+  volume_in_lot: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[1]/div[2]/input"
+  sell: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[3]/div[1]"
+  invest: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[5]/button"
+  avaliable_funds_number: "//panda-forex-account-status/div/ul/li[1]/div[2]"
+  used_funds_number: "//panda-forex-account-status/div/ul/li[2]/div[2]"
+  account_value_number: "//panda-forex-account-status/div/ul/li[3]/div[2]"
+  total_p_l_number: "//panda-forex-account-status/div/ul/li[4]/div[2]"
+  margin_level_number:  "//panda-forex-account-status/div/ul/li[5]/div[2]"
+  click_buy: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[3]/div[2]"
+  pips_right_panel: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[2]/div[2]/div[2]"
+  pips_bottom_panel: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/tabs/div/div/open-trades/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/open-trade/td[6]"
+  click_stop_loss: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/tabs/div/div/open-trades/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/open-trade/td[9]/button"
+  check_button: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[3]/div[1]/label"
+  enter_stop_loss: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[4]/div[1]/custom-input/div/input"
+  pips_bottom_panel_test: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[6]/div[1]/div/div"
+
