--- a/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
@@ -22,3 +22,28 @@ LeadsModule:
   check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[10]"
   check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
+CALoginPage:
+  city: "//input[@name = 'city']"
+  zip_code: "//input[@name = 'postCode']"
+  address: "//input[@name = 'address']"
+  next_btn: "//button[contains (text(), 'Next')]"
+WebTraderPage:
+  avaliable_funds: "//*[@id='u8984']/panda-forex-account-status/div/ul/li[1]/div[1]"
+  used_funds: "//*[@id='u8984']/panda-forex-account-status/div/ul/li[2]/div[1]"
+  volume_in_lot: "//*[@id='u8983']/panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[1]/div[2]/input"
+  sell: "//*[@id='u8983']/panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[3]/div[1]"
+  invest: "//*[@id='u8983']/panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[5]/button"
+  avaliable_funds_number: "//li[1]/div[@class='value-pandats']"
+  used_funds_number: "//li[2]/div[@class='value-pandats']"
+  account_value_number: "//li[3]/div[@class='value-pandats']"
+  total_p_l_number: "//li[4]/div[@class='value-pandats']"
+  margin_level_number:  "//li[5]/div[@class='value-pandats']"
+  click_buy: "//*[@id='u8983']/panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[3]/div[2]"
+  pips_right_panel: "//*[@id='u8983']/panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[2]/div[2]/div[2]"
+  pips_bottom_panel: "//*[@id='u8983']/panda-forex-trading-platform/div/div/div/div[2]/div[2]/tabs/div/div/open-trades/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr[1]/open-trade/td[6]"
+  click_stop_loss: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/tabs/div/div/open-trades/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/open-trade/td[9]/button"
+  check_button: "//label[contains(text(), 'Set Stop Loss')]"
+  enter_stop_loss: "//input[@class='custom-input-field-pandats ng-untouched ng-pristine ng-valid locked-pandats']"
+  pips_bottom_panel_test: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[6]/div[1]/div/div"
+CAPage:
+  click_close:  "/html/body/panda-forex-client-area/div/div/client-area-popup/div/div[2]/div[1]/a/i"
