--- a/src/main/python/ui/crm/model/BrandsXpath/trade99_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/trade99_xpath.yml
@@ -2,3 +2,7 @@
 FinancialTransactionsPage:
   client_name_element:  "(//*[@id='listBody']//tr/td[4])[%s]"
   modified_time_element: "(//*[contains(@id,'row_')]/td[12])[%s]"
+CALoginPage:
+  sign_up: "//div[@class='btn-holder desktop-only']/a[@title='Open a Live Account']"
+ClientsPage:
+  client_currency: "//td[@class='dvtCellInfo'][contains(text(),'BTC')]"
