--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -35,7 +35,7 @@ tests_config:
   class: CheckDragonTest
   tests:
     - test_ca_dragon_valid_phone
-#    - test_ca_dragon_invalid_phone
+    - test_ca_dragon_invalid_phone
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
 #  class: StrattonQuestionnaire
@@ -256,8 +256,8 @@ tests_config:
 #    - test_sorting
 #
 ############################################# DRAGON TESTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-#  class: CheckDragonTest
-#  tests:
-#    - test_dragon_leads
-#    - test_dragon_clients
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+  class: CheckDragonTest
+  tests:
+    - test_dragon_leads
+    - test_dragon_clients
