--- a/src/main/python/ui/crm/model/BrandsXpath/brokerz_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/brokerz_xpath.yml
@@ -22,4 +22,7 @@ LeadsModule:
   check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[10]"
   check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
+AffiliatePage:
+  countrys: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[contains(text(),'%s')]"
+  methods: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[contains(text(),'%s')]"
 
