--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,5 +1,17 @@
 tests_config:
 
+######################################### API TESTS ##############################################
+- module: src.test.python.ui.automation.implementation.api.Test_API
+  class: TestAPI
+  tests:
+    - test_autorization_process
+    - test_create_new_customer
+    - test_read_customer_details
+    - test_update_customer
+    - test_create_lead_api
+    - test_read_leads_api
+    - test_login_token
+
 ########################################## CA TESTS ##############################################
 #- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
 #  class: SignUpTest
@@ -31,11 +43,11 @@ tests_config:
 #    - test_check_and_update_ticket_in_crm
 #    - test_check_updated_ticket_in_ca
 
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-  class: CheckDragonTest
-  tests:
-    - test_ca_dragon_valid_phone
-    - test_ca_dragon_invalid_phone
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_ca_dragon_valid_phone
+#    - test_ca_dragon_invalid_phone
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
 #  class: StrattonQuestionnaire
@@ -256,8 +268,8 @@ tests_config:
 #    - test_sorting
 #
 ############################################# DRAGON TESTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-  class: CheckDragonTest
-  tests:
-    - test_dragon_leads
-    - test_dragon_clients
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_dragon_leads
+#    - test_dragon_clients
