--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -1,5 +1,64 @@
 tests_config:
 
+######################################### API TESTS ##############################################
+- module: src.test.python.ui.automation.implementation.api.Test_API
+  class: TestAPI
+  tests:
+    - test_autorization_process
+    - test_create_new_customer
+    - test_read_customer_details
+    - test_update_customer
+    - test_create_lead_api
+    - test_read_leads_api
+    - test_login_token
+
+########################################## CA TESTS ##############################################
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_check_email_sign_up
+#    - test_registred_client_exist_in_crm
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
+#    - test_verify_accounts_in_crm
+#    - test_switch_between_accounts_ca
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+#  class: PersonalDetailsUpdateTestCA
+#  tests:
+#    - test_update_personal_details_in_ca
+#    - test_personal_details_were_updated_in_crm
+#    - test_update_personal_details_in_crm
+#    - test_personal_details_were_updated_in_ca
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+#  class: CreateSupportTicketTestCa
+#  tests:
+#    - test_create_ticket
+#    - test_check_and_update_ticket_in_crm
+#    - test_check_updated_ticket_in_ca
+
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_ca_dragon_valid_phone
+#    - test_ca_dragon_invalid_phone
+
+#- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
+#  class: StrattonQuestionnaire
+#  tests:
+#    - test_customer_classification_empty
+#    - test_customer_classification_blocked
+#    - test_customer_classification_negative
+#    - test_customer_classification_retail
+#    - test_customer_classification_professional_eligible
+#    - test_customer_classification_professional_elective
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
 #  class: MyDashboardActionsTest
 #  tests:
@@ -150,11 +209,11 @@ tests_config:
 #  tests:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
-#  class: CreateNewCustomer
+#- module: src.test.python.ui.automation.implementation.crm.api.Test_API
+#  class: TestAPI
 #  tests:
-#    - test_create_new_lead
-#    - test_create_new_customer
+#    - test_autoassign_create_new_customer
+#    - test_autoassign_create_new_lead
 #- module: src.test.python.ui.automation.implementation.crm.tests_auto_assign_module.Test_Auto_Assign
 #  class: AutoAssignModuleTest
 #  tests:
@@ -190,3 +249,17 @@ tests_config:
 #  tests:
 #    - test_create_user
 #    - test_delete_user
+########################################### DOCUMENTS MODULE ############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+#  class: DocumentModuleTest
+#  tests:
+#    - test_searching_by_columns
+#    - test_open_tabs
+#    - test_sorting
+#
+############################################# DRAGON TESTS ###############################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_dragon_leads
+#    - test_dragon_clients
