--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -12,12 +12,18 @@ tests_config:
 #    - test_read_leads_api
 #    - test_login_token
 
-########################################## CA TESTS ##############################################
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+  class: CheckDragonTest
   tests:
-    - test_check_sign_up
-    - test_check_email_sign_up
+    - test_api_dragon_valid_phone
+#    - test_api_dragon_invalid_phone
+
+########################################## CA TESTS ##############################################
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
