--- a/src/test/python/resources/config/Brands/tradenero.yml
+++ b/src/test/python/resources/config/Brands/tradenero.yml
@@ -1,3 +1,4 @@
 pretty_name: "TradeNero"
 url: "https://tradenero.ptscrm.com/"
 url_ca: "https://www.tradenero.com/#/"
+otp_secret: ZPNZF3M6EUO3FWV5
