--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
 #
 #- name: kontofx
 #  config_file: kontofx.yml
@@ -18,8 +18,8 @@ brands:
 #- name: gigafx
 #  config_file: gigafx.yml
 #
-#- name: trade99
-#  config_file: trade99.yml
+- name: trade99
+  config_file: trade99.yml
 #
 #- name: dax-300
 #  config_file: dax-300.yml
