--- a/src/test/python/resources/config/brands9.yml
+++ b/src/test/python/resources/config/brands9.yml
@@ -3,5 +3,5 @@ brands:
 - name: trade99
   config_file: trade99.yml
 
-- name: any1profit
-  config_file: any1profit.yml
+#- name: any1profit
+#  config_file: any1profit.yml
