--- a/src/test/python/resources/config/brands8.yml
+++ b/src/test/python/resources/config/brands8.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: privat-trade
-  config_file: privat-trade.yml
+#- name: privat-trade
+#  config_file: privat-trade.yml
 
 - name: stox50
   config_file: stox50.yml
