--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -19,35 +19,35 @@ tests_config:
 #    - test_api_dragon_invalid_phone
 
 ########################################## CA TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
-#    - test_check_sign_up
-#    - test_check_email_sign_up
-#    - test_registred_client_exist_in_crm
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-#  class: AddNewAccountTestCA
-#  tests:
-#    - test_add_live_account_ca
-#    - test_add_demo_account_ca
-#    - test_verify_accounts_in_crm
-#    - test_switch_between_accounts_ca
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-#  class: PersonalDetailsUpdateTestCA
-#  tests:
-#    - test_update_personal_details_in_ca
-#    - test_personal_details_were_updated_in_crm
-#    - test_update_personal_details_in_crm
-#    - test_personal_details_were_updated_in_ca
-#
-#- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
-#  class: CreateSupportTicketTestCa
-#  tests:
-#    - test_create_ticket
-#    - test_check_and_update_ticket_in_crm
-#    - test_check_updated_ticket_in_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+    - test_check_email_sign_up
+    - test_registred_client_exist_in_crm
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+  class: AddNewAccountTestCA
+  tests:
+    - test_add_live_account_ca
+    - test_add_demo_account_ca
+    - test_verify_accounts_in_crm
+    - test_switch_between_accounts_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
+  tests:
+    - test_update_personal_details_in_ca
+    - test_personal_details_were_updated_in_crm
+    - test_update_personal_details_in_crm
+    - test_personal_details_were_updated_in_ca
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+  class: CreateSupportTicketTestCa
+  tests:
+    - test_create_ticket
+    - test_check_and_update_ticket_in_crm
+    - test_check_updated_ticket_in_ca
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
 #  class: CheckDragonTest
@@ -235,12 +235,12 @@ tests_config:
 #    - test_perform_delete_rule
 #
 ########################################### CHECK MODULES ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-  class: CheckModulesTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+#  class: CheckModulesTest
+#  tests:
 #    - test_my_dashboard_loading
 #    - test_audit_logs_loading
-    - test_check_dashboard
+#    - test_check_dashboard
 #    - test_check_leaderboard
 #    - test_check_user_management
 #
