--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,16 +1,16 @@
 tests_config:
 
 ######################################### API TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.api.Test_API
-#  class: TestAPI
-#  tests:
-#    - test_autorization_process
-#    - test_create_new_customer
-#    - test_read_customer_details
-#    - test_update_customer
-#    - test_create_lead_api
-#    - test_read_leads_api
-#    - test_login_token
+- module: src.test.python.ui.automation.implementation.api.Test_API
+  class: TestAPI
+  tests:
+    - test_autorization_process
+    - test_create_new_customer
+    - test_read_customer_details
+    - test_update_customer
+    - test_create_lead_api
+    - test_read_leads_api
+    - test_login_token
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
 #  class: CheckDragonTest
@@ -19,35 +19,35 @@ tests_config:
 #    - test_api_dragon_invalid_phone
 
 ########################################## CA TESTS ##############################################
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
-    - test_check_email_sign_up
-    - test_registred_client_exist_in_crm
-
-- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-  class: AddNewAccountTestCA
-  tests:
-    - test_add_live_account_ca
-    - test_add_demo_account_ca
-    - test_verify_accounts_in_crm
-    - test_switch_between_accounts_ca
-
-- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
-  class: PersonalDetailsUpdateTestCA
-  tests:
-    - test_update_personal_details_in_ca
-    - test_personal_details_were_updated_in_crm
-    - test_update_personal_details_in_crm
-    - test_personal_details_were_updated_in_ca
-
-- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
-  class: CreateSupportTicketTestCa
-  tests:
-    - test_create_ticket
-    - test_check_and_update_ticket_in_crm
-    - test_check_updated_ticket_in_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_check_email_sign_up
+#    - test_registred_client_exist_in_crm
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
+#    - test_verify_accounts_in_crm
+#    - test_switch_between_accounts_ca
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+#  class: PersonalDetailsUpdateTestCA
+#  tests:
+#    - test_update_personal_details_in_ca
+#    - test_personal_details_were_updated_in_crm
+#    - test_update_personal_details_in_crm
+#    - test_personal_details_were_updated_in_ca
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+#  class: CreateSupportTicketTestCa
+#  tests:
+#    - test_create_ticket
+#    - test_check_and_update_ticket_in_crm
+#    - test_check_updated_ticket_in_ca
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
 #  class: CheckDragonTest
