--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
 #
 #- name: kontofx
 #  config_file: kontofx.yml
@@ -29,3 +29,6 @@ brands:
 
 #- name: tradenero
 #  config_file: tradenero.yml
+
+- name: any1profit
+  config_file: any1profit.yml
