--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -23,6 +23,199 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+    - test_check_sign_up
+
+
 #    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
