--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,10 +1,10 @@
 brands:
-
-- name: newforexstage2
-  config_file: newforexstage2.yml
-
-- name: ptbanc
-  config_file: ptbanc.yml
+#
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
+#
+#- name: ptbanc
+#  config_file: ptbanc.yml
 
 #- name: q8
 #  config_file: q8.yml
@@ -12,8 +12,8 @@ brands:
 #- name: kontofx
 #  config_file: kontofx.yml
 #
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 #
 #- name: gigafx
 #  config_file: gigafx.yml
@@ -32,3 +32,6 @@ brands:
 
 #- name: any1profit
 #  config_file: any1profit.yml
+
+- name: alferatrade
+  config_file: alferatrade.yml
