--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -27,11 +27,11 @@ brands:
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
 
-#- name: tradenero
-#  config_file: tradenero.yml
+- name: tradenero
+  config_file: tradenero.yml
 
 #- name: any1profit
 #  config_file: any1profit.yml
 
-- name: alferatrade
-  config_file: alferatrade.yml
+#- name: alferatrade
+#  config_file: alferatrade.yml
