--- a/src/test/python/resources/config/tests_api.yml
+++ b/src/test/python/resources/config/tests_api.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ######################################### API TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.api.Test_API
-#  class: TestAPI
-#  tests:
+- module: src.test.python.ui.automation.implementation.api.Test_API
+  class: TestAPI
+  tests:
 #    - test_autorization_process
-#    - test_create_new_customer
-#    - test_read_customer_details
+    - test_create_new_customer
+    - test_read_customer_details
 #    - test_update_customer
 #    - test_create_lead_api
 #    - test_read_leads_api
