--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -32,3 +32,6 @@ brands:
 
 #- name: any1profit
 #  config_file: any1profit.yml
+
+- name: alferatrade
+  config_file: alferatrade.yml
