--- a/src/test/python/resources/config/tests10.yml
+++ b/src/test/python/resources/config/tests10.yml
@@ -5,7 +5,7 @@ tests_config:
   class: MyDashboardActionsTest
   tests:
     - test_edit_event_my_dashboard
-#    - test_email_icon
+    - test_email_icon
     - test_sms_icon
     - test_sorting_columns
     - test_searching_by_columns
