--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -8,7 +8,7 @@ tests_config:
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
 
-#################################### CLIENTS ###############################################
+######################################## CLIENTS ###############################################
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
@@ -58,3 +58,8 @@ tests_config:
   tests:
     - test_change_client_password_from_crm  # change a client account password from the crm
     - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Send_Email
+  class: SendEmailTestCRM
+  tests:
+    - test_send_email # preconditions: convert lead
