--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -21,8 +21,8 @@ brands:
 #- name: trade99
 #  config_file: trade99.yml
 #
-#- name: dax-300
-#  config_file: dax-300.yml
+- name: dax-300
+  config_file: dax-300.yml
 
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
@@ -33,5 +33,5 @@ brands:
 #- name: any1profit
 #  config_file: any1profit.yml
 
-- name: alferatrade
-  config_file: alferatrade.yml
+#- name: alferatrade
+#  config_file: alferatrade.yml
