--- a/src/test/python/resources/config/tests_api.yml
+++ b/src/test/python/resources/config/tests_api.yml
@@ -10,7 +10,7 @@ tests_config:
 #    - test_update_customer
 #    - test_create_lead_api
 #    - test_read_leads_api
-    - test_login_token
+#    - test_login_token
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
 #  class: CheckDragonTest
