--- a/src/test/python/resources/config/tests_api.yml
+++ b/src/test/python/resources/config/tests_api.yml
@@ -4,13 +4,13 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.api.Test_API
   class: TestAPI
   tests:
-#    - test_autorization_process
+    - test_autorization_process
     - test_create_new_customer
-#    - test_read_customer_details
-#    - test_update_customer
-#    - test_create_lead_api
-#    - test_read_leads_api
-#    - test_login_token
+    - test_read_customer_details
+    - test_update_customer
+    - test_create_lead_api
+    - test_read_leads_api
+    - test_login_token
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
 #  class: CheckDragonTest
