--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,4 +1,7 @@
 brands:
 
-- name: kbcapitals
-  config_file: kbcapitals.yml
+#- name: kbcapitals
+#  config_file: kbcapitals.yml
+
+- name: etfinance
+  config_file: etfinance.yml
