--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -7,10 +7,10 @@ tests_config:
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
 
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-  class: DepositTestCRM
-  tests:
-    - test_make_deposit_crm  # make a deposit into a trading account from the crm
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
+#  class: DepositTestCRM
+#  tests:
+#    - test_make_deposit_crm  # make a deposit into a trading account from the crm
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
 #  class: CreateNewCustomer
