--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -18,8 +18,8 @@ brands:
 #- name: gigafx
 #  config_file: gigafx.yml
 #
-- name: trade99
-  config_file: trade99.yml
+#- name: trade99
+#  config_file: trade99.yml
 #
 #- name: dax-300
 #  config_file: dax-300.yml
@@ -30,8 +30,8 @@ brands:
 #- name: tradenero
 #  config_file: tradenero.yml
 
-#- name: any1profit
-#  config_file: any1profit.yml
+- name: any1profit
+  config_file: any1profit.yml
 
 #- name: alferatrade
 #  config_file: alferatrade.yml
