--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -20,13 +20,14 @@ FirstLeadInfo:
   phone: "222222"
   phone_area_code:
   first_tittle: "tittle test"
-  first_lead_source: "Conference"
+  first_lead_source: "Other"
   first_lead_status: "R - New"
   first_lead_status_not_interested: "R - Not Intrested"
   first_lead_status_new: "New"
   first_lead_status_giga: "C - New"
   first_lead_status_uft: "New"
   first_lead_status_b_test: "B - Test"
+  first_lead_status_none: "--None--"
   first_assigned_to: "Panda Auto"
   first_source_name: "source name test"
   brand:
@@ -54,7 +55,7 @@ SecondLeadInfo:
   first_descriptions: "Second description test"
   phone: "333333"
   first_tittle: "second tittle test"
-  first_lead_source: "Conference"
+  first_lead_source: "Other"
   first_lead_status: "B - No interest"
   first_lead_status_giga: "R - Not Intrested"
   first_lead_status_new: "Not interested"
