--- a/src/test/python/resources/config/tests_sanity.yml
+++ b/src/test/python/resources/config/tests_sanity.yml
@@ -1,11 +1,11 @@
 tests_config:
 
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
-
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
 #  class: DepositTestCRM
 #  tests:
@@ -16,8 +16,8 @@ tests_config:
 #  tests:
 #    - test_create_lead_api
 #    - test_create_new_customer
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-#  class: CheckModulesTest
-#  tests:
-#    - test_check_sprint_version
+
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModulesTest
+  tests:
+    - test_check_sprint_version
