--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -16,12 +16,15 @@ FirstLeadInfo:
   street: "street test"
   postal_code: "88888"
   first_country: "Germany"
+  first_country_albania: "Albania"
   first_descriptions: "Description test"
   phone: "222222"
   phone_area_code:
   first_tittle: "tittle test"
   first_lead_source: "Other"
+  first_lead_source_empty: ""
   first_lead_status: "R - New"
+  first_lead_status_empty: ""
   first_lead_status_not_interested: "R - Not Intrested"
   first_lead_status_new: "New"
   first_lead_status_giga: "C - New"
