--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -36,5 +36,26 @@ brands:
 #- name: alferatrade
 #  config_file: alferatrade.yml
 
-- name: hizlifx
-  config_file: hizlifx.yml
+#- name: hizlifx
+#  config_file: hizlifx.yml
+
+#- name: stox50
+#  config_file: stox50.yml
+
+#- name: strattonmarkets-eu
+#  config_file: strattonmarkets-eu.yml
+
+#- name: aztrades
+#  config_file: aztrades.yml
+
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+
+#- name: olympiamarkets
+#  config_file: olympiamarkets.yml
+
+#- name: globalix
+#  config_file: globalix.yml
+
+#- name: libramarkets
+#  config_file: libramarkets.yml
