--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -1,12 +1,12 @@
 tests_config:
 
 ######################################### CA TESTS ##############################################
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
-    - test_check_email_sign_up
-    - test_registred_client_exist_in_crm
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_check_email_sign_up
+#    - test_registred_client_exist_in_crm
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
 #  class: AddNewAccountTestCA
@@ -37,12 +37,12 @@ tests_config:
 #    - test_ca_dragon_valid_phone
 #    - test_ca_dragon_invalid_phone
 
-#- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
-#  class: StrattonQuestionnaire
-#  tests:
-#    - test_customer_classification_empty
-#    - test_customer_classification_blocked
-#    - test_customer_classification_negative
-#    - test_customer_classification_retail
-#    - test_customer_classification_professional_eligible
-#    - test_customer_classification_professional_elective
+- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
+  class: StrattonQuestionnaire
+  tests:
+    - test_customer_classification_empty
+    - test_customer_classification_blocked
+    - test_customer_classification_negative
+    - test_customer_classification_retail
+    - test_customer_classification_professional_eligible
+    - test_customer_classification_professional_elective
