--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
+- name: newforexstage2
+  config_file: newforexstage2.yml
 
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -69,5 +69,5 @@ brands:
 #- name: uprofx
 #  config_file: uprofx.yml
 
-- name: solocapitlas
-  config_file: solocapitlas.yml
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
