--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -7,6 +7,13 @@ tests_config:
     - test_check_sign_up
     - test_check_email_sign_up
     - test_registred_client_exist_in_crm
+
+- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+  class: TestPagesCA
+  tests:
+    - test_transaction_history_page_loading
+    - test_check_email_sign_up
+    - test_registred_client_exist_in_crm
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
 #  class: AddNewAccountTestCA
