--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,71 +3,71 @@ brands:
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
 
-- name: ptbanc
-  config_file: ptbanc.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 
 #- name: q8
 #  config_file: q8.yml
 
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 
 - name: trade99
   config_file: trade99.yml
 
-- name: dax-300
-  config_file: dax-300.yml
-
-- name: strattonmarkets-eu
-  config_file: strattonmarkets-eu.yml
-
-- name: tradenero
-  config_file: tradenero.yml
-
-- name: any1profit
-  config_file: any1profit.yml
-
-- name: alferatrade
-  config_file: alferatrade.yml
-
-- name: hizlifx
-  config_file: hizlifx.yml
-
-- name: stox50
-  config_file: stox50.yml
-
-- name: strattonmarkets-eu
-  config_file: strattonmarkets-eu.yml
-
-- name: aztrades
-  config_file: aztrades.yml
-
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
-
-- name: olympiamarkets
-  config_file: olympiamarkets.yml
-
-- name: globalix
-  config_file: globalix.yml
-
-- name: libramarkets
-  config_file: libramarkets.yml
-
-- name: swisscci
-  config_file: swisscci.yml
-
-- name: jonesmutual
-  config_file: jonesmutual.yml
-
-- name: uprofx
-  config_file: uprofx.yml
-
-- name: solocapitlas
-  config_file: solocapitlas.yml
+#- name: dax-300
+#  config_file: dax-300.yml
+#
+#- name: strattonmarkets-eu
+#  config_file: strattonmarkets-eu.yml
+#
+#- name: tradenero
+#  config_file: tradenero.yml
+#
+#- name: any1profit
+#  config_file: any1profit.yml
+#
+#- name: alferatrade
+#  config_file: alferatrade.yml
+#
+#- name: hizlifx
+#  config_file: hizlifx.yml
+#
+#- name: stox50
+#  config_file: stox50.yml
+#
+#- name: strattonmarkets-eu
+#  config_file: strattonmarkets-eu.yml
+#
+#- name: aztrades
+#  config_file: aztrades.yml
+#
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
+#
+#- name: olympiamarkets
+#  config_file: olympiamarkets.yml
+#
+#- name: globalix
+#  config_file: globalix.yml
+#
+#- name: libramarkets
+#  config_file: libramarkets.yml
+#
+#- name: swisscci
+#  config_file: swisscci.yml
+#
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+#
+#- name: uprofx
+#  config_file: uprofx.yml
+#
+#- name: solocapitlas
+#  config_file: solocapitlas.yml
