--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -82,8 +82,8 @@ client_1:
 #  first_name: "John-test" # manual config
   EVAL_first_name: "'testqa' + (''.join(random.sample(string.ascii_uppercase*6, 6)))"
   last_name: "Doe"
-  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
-  EVAL_email1: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + 'c@pandats.com'"
+  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S%f')) + '@pandats.com'"
+  EVAL_email1: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S%f')) + 'c@pandats.com'"
 #  email: "john_doe_20180823_131412@pandats.com" # manual config
   short_client_name: "John-test Doe"
   phone: "7777777"
